Don't popup gui when unmounting with devmon

--- a/media/.config/ranger/rc.conf
+++ b/media/.config/ranger/rc.conf
@@ -174,9 +174,9 @@ map tV shell vim --servername termgeneral --remote-tab-silent %f
 map tf shell xdotool key control+shift+x
 
 # umount all
-map uN shell devmon -u
-# umount most recent
-map un shell devmon -c
+map uN shell devmon --unmount-all --no-gui
+# umount most recently mounted
+map un shell devmon --unmount-recent --no-gui
 # eject tray
 map ue shell sudo eject /dev/sr0
 
