Update ffcut script
- Seconds is valid format for ffmpeg; get rid of conversion function
- Get rid of download option
- Use /tmp for storing times
- Don't use copy by default (for accurate cut)
- Use double square brackets

--- a/media/.mpv/input.conf
+++ b/media/.mpv/input.conf
@@ -167,15 +167,15 @@ r-! run bash wm_action mpv r!
 # }}}
 # }}}
 
-# gif making# {{{
-a run "/bin/sh" "-c" "echo ${=time-pos} > ~/Move/gif/start_time.txt &" ; set ab-loop-a ${=time-pos}
-b run "/bin/sh" "-c" "echo ${=time-pos} > ~/Move/gif/end_time.txt &" ; set ab-loop-b ${=time-pos}
-# clear (mostly)
+# Loops and Video Cutting {{{
+a run "mkdir" "-p" "/tmp/ffcut" ; run "/bin/sh" "-c" "echo ${=time-pos} > /tmp/ffcut/start" ; set ab-loop-a ${=time-pos}
+b run "mkdir" "-p" "/tmp/ffcut" ; run "/bin/sh" "-c" "echo ${=time-pos} > /tmp/ffcut/end &" ; set ab-loop-b ${=time-pos}
+# clear
 c set ab-loop-a no
 # sets a, b, then clears
 # g ab_loop
-G cycle pause ; run "/bin/sh" "-c" "echo '${path}' > ~/move/gif/filepath.txt" ; run ~/bin/mpv/ffcut ${path}
-SPACE-G cycle pause ; run "/bin/sh" "-c" "echo '${path}' > ~/move/gif/filepath.txt" ; run ~/bin/mpv/ffcut make_gif ${path}
+G run "/bin/sh" "-c" "echo '${path}' > /tmp/ffcut/last_file" ; run "ffcut" "${path}"
+# SPACE-G run "/bin/sh" "-c" "echo '${path}' > /tmp/ffcut/last_file" ; run "ffcut" "-m" "${path}"
 
 # }}}
 
