--- a/root/etc/resolv.conf
+++ b/root/etc/resolv.conf
@@ -1,14 +1,18 @@
+# using unbound and forwarding to DNSCrypt:
+nameserver 127.0.0.1
+
+# otherwise:
 # closest OpenNIC servers
 # nameserver xxxx
 
 # http://freedns.zone/en/
 # freedns primary (no logging or censorship/blocking)
-nameserver 37.235.1.174
+# nameserver 37.235.1.174
 # freedns secondary
-nameserver 37.235.1.177
+# nameserver 37.235.1.177
 
 # http://blog.uncensoreddns.org/en
 # anycast server
-nameserver 91.239.100.100
+# nameserver 91.239.100.100
 # ns1.censurfridns.dk
-nameserver 89.233.43.71
+# nameserver 89.233.43.71
