Update pinentry-qt location for gpg-agent

--- a/mail/.gnupg/gpg-agent.conf
+++ b/mail/.gnupg/gpg-agent.conf
@@ -5,6 +5,6 @@ default-cache-ttl 10800
 max-cache-ttl 86400
 
 # PIN entry program
-pinentry-program /usr/bin/pinentry-qt4
+pinentry-program /usr/bin/pinentry-qt
 # pinentry-program /usr/bin/pinentry-gtk-2
 # pinentry-program /usr/bin/pinentry-curses
