--- a/music/.abcde.conf
+++ b/music/.abcde.conf
@@ -1,477 +1,77 @@
-# http://ubuntuforums.org/showthread.php?t=109429
-# Actions to do
-ACTIONS=cddb,read,encode,tag,move,clean
+# defaults: /etc/abcde.conf
+# TODO:
+# - find something better than glyrc? (gives wrong album art if no matches
+# and --minsize doesn't work for any sources I've tried)
 
-# selection of cd reader
-# CDROMREADERSYNTAX=cdparanoia 
+# default is cddb,read,encode,tag,move,clean
+# getalbumart needs glyr; doesn't embed
+ACTIONS=default,getalbumart
+# need imagemagick for conversion
+ALBUMARTFILE="cover.png"
+ALBUMARTTYPE="PNG"
+# don't open album art
+DISPLAYCMD=true
 
-# if wanted to normalize audio would do this:
-# ACTIONS=cddb,read,normalize,encode,tag,move,clean
+# use musicbrainz instead of cddb; unfortunately no fallback option
+# requires perl-musicbrainz-discid and perl-webservice-musicbrainz
+CDDBMETHOD=musicbrainz
 
-# Output dir
+# cd ripping program
+CDROMREADERSYNTAX=cdparanoia
+CDPARANOIA=cdparanoia
+CDPARANOIAOPTS="--never-skip=10"
+
+# temp dir
+WAVOUTPUTDIR='/tmp'
+# move here
 OUTPUTDIR="$HOME/Music"
 
-# temp dir 
-WAVOUTPUTDIR='/tmp'
-
 # output type
-FLACENCODERSYNTAX=flac                 # Specify encoder for FLAC
+FLACENCODERSYNTAX=flac
 OUTPUTTYPE=flac
 FLAC=flac
-FLACOPTS='--verify --best'             # Options for FLAC
-# Add a comment into the ID3 comment tag
+#  --best is the same as -8 (highest compression) (also see -e)
+FLACOPTS='--verify --best'
+# add a comment into the ID3 comment tag
 COMMENT='Created using flac ${FLACOPTS}'
 
 # naming and folder structure
 OUTPUTFORMAT='${ARTISTFILE}/${ALBUMFILE}/${TRACKNUM} - ${TRACKFILE}'
-
-# naming of multi artist albums (same)
-VAOUTPUTFORMAT='${ARTISTFILE}/${ARTISTFILE} - ${ALBUMFILE}/${ARTISTFILE} - ${TRACKNUM} - ${TRACKFILE}'
-
-# EXTRAVERBOSE=y                          # Useful for debugging
-EJECTCD=y                               # Please eject cd when finished :-)
-
+# for compilations (no single albumartist)
+VAOUTPUTFORMAT='Various/${ALBUMFILE}/${TRACKNUM} - ${ARTISTFILE} - ${TRACKFILE}'
+ONETRACKOUTPUTFORMAT='${ARTISTFILE}/${ALBUMFILE}/${TRACKFILE}'
+VAONETRACKOUTPUTFORMAT='Various/${ALBUMFILE}/${ARTISTFILE} - ${TRACKFILE}'
+# pad track number with zeros (e.g. 01)
+PADTRACKS=y
 # don't convert spaces to underscores
 mungefilename ()
 {
-echo "$@" | sed s,:,\ -,g | tr / _ | tr -d \"\?\[:cntrl:\]
+    echo "$@" | tr -d ":><|*/\"'?[:cntrl:]"
 }
 
-# moving different formats to different folders:
-# OUTPUTDIR="/music"
-# OUTPUTTYPE=flac,mp3
-# OUTPUTFORMAT='${OUTPUT}/${ARTISTFILE}-${ALBUMFILE}/${TRACKNUM}.${TRACKFILE}'
-# This combination puts the FLAC files in /music/flac, and the mp3 files in /music/mp3.
-# The key is the ${OUTPUT}/ bit in OUTPUTFORMAT; ${OUTPUT} is "flac" for FLAC and "mp3" for MP3.
+# for debugging
+# EXTRAVERBOSE=2
+EJECTCD=y
+MAXPROCS=2
 
-#==============================
-# Another Sample Config {{{
-# ==============================
-# -----------------$HOME/.abcde.conf----------------- #
-# 
-#   A sample configuration file to convert music cds to 
-#      MP3, Ogg Vorbis, FLAC, Musepack & AAC 
-#          using abcde version 2.3.99.6
-# 
-#       http://andrews-corner.org/abcde.html
-# -------------------------------------------------- #
-# 
-# OGGENCODERSYNTAX=oggenc                # Specify encoder for Ogg Vorbis
-# MP3ENCODERSYNTAX=lame                  # Specify encoder for MP3
-# FLACENCODERSYNTAX=flac                 # Specify encoder for FLAC
-# MPPENCODERSYNTAX=mppenc                # Specify encoder for Musepack
-# AACENCODERSYNTAX=faac                  # Specify encoder for AAC
-# 
-# OGGENC=oggenc                          # Path to Ogg Vorbis encoder
-# LAME=lame                              # Path to MP3 encoder
-# FLAC=flac                              # Path to FLAC encoder
-# MPPENC=mppenc                          # Path to Musepack encoder
-# AACENC=faac                            # Path to AAC encoder
-# 
-# OGGENCOPTS='-q 6'                      # Options for Ogg Vorbis
-# LAMEOPTS='--preset extreme'            # Options for MP3 
-# FLACOPTS='--verify --best'             # Options for FLAC
-# MPPENCOPTS='--extreme'                 # Options for Musepack
-# AACENCOPTS='-q 250 -w -s'              # Options for AAC
-#  
-# OUTPUTTYPE="mp3,flac,m4a"      # Encode to just 3 formats!
-# 
-# CDROMREADERSYNTAX=cdparanoia            
-# CDPARANOIA=cdparanoia  
-# CDPARANOIAOPTS="--never-skip=40"
-# 
-# Give the location of the CD identification program:       
-# CDDISCID=cd-discid           
-#                                
-# OUTPUTDIR="$HOME/Music/"               
-# ACTIONS=cddb,playlist,read,encode,tag,move,clean
-# OUTPUTFORMAT='${OUTPUT}/${ARTISTFILE}-${ALBUMFILE}/${TRACKNUM}.${TRACKFILE}'
-# VAOUTPUTFORMAT='${OUTPUT}/Various-${ALBUMFILE}/${TRACKNUM}.${ARTISTFILE}-${TRACKFILE}'
-# ONETRACKOUTPUTFORMAT='${OUTPUT}/${ARTISTFILE}-${ALBUMFILE}/${ALBUMFILE}'
-# VAONETRACKOUTPUTFORMAT='${OUTPUT}/Various-${ALBUMFILE}/${ALBUMFILE}'
-# 
-# Create playlists for single and various-artist encodes. I would suggest
-# commenting these out for single-track encoding.
-# PLAYLISTFORMAT='${OUTPUT}/${ARTISTFILE}-${ALBUMFILE}/${ALBUMFILE}.m3u'
-# VAPLAYLISTFORMAT='${OUTPUT}/Various-${ALBUMFILE}/${ALBUMFILE}.m3u'
-# 
-# mungefilename ()
-# {
-#   echo "$@" | sed s,:,-,g | tr / _ | tr -d \'\"\?\[:cntrl:\]
-# }
-# MAXPROCS=4                              # Run a few encoders simultaneously
-# PADTRACKS=y                             # Makes tracks 01 02 not 1 2
-# EXTRAVERBOSE=y                          # Useful for debugging
-# EJECTCD=y                               # Please eject cd when finished :-)
-# }}}
-
-# System defaults for abcde version 2.2.x {{{
-# Nothing in this file is uncommented by default.
-# 
-# If you wish to override these system-wide settings, create your own
-# .abcde.conf file in your home directory.
-
-# CDDB options
-# Choose whether you want to use CDDB or Musicbrainz. Default is CDDB
-#CDDBMETHOD=cddb
-
-# If you wish to use a different CDDB server, edit this line.
-# If you just wanted to use a proxy server, just set your http_proxy
-# environment variable - wget will use it correctly.
-#CDDBURL="http://freedb.freedb.org/~cddb/cddb.cgi"
-
-# The CDDB protocol level.
-# Right now 5 is latin1 output and 6 is UTF8 encoding.
-#CDDBPROTO=6
-
-# The CDDB protocol requires hello information, including a valid username
-# and hostname. If you feel paranoid about giving away such info, edit this
-# line - the format is username@hostname.
-#HELLOINFO="`whoami`@`hostname`"
-
-# This controls the email address CDDB changes are submitted to.
-#CDDBSUBMIT=freedb-submit@freedb.org
-
-# The following options control whether or not fetched CDDB entries
-# are cached locally in $CDDBLOCALDIR
-#CDDBCOPYLOCAL="n"
-#CDDBLOCALDIR="$HOME/.cddb"
-#CDDBLOCALRECURSIVE="n"
-
-# If NOSUBMIT is set to y, then abcde will never prompt asking if you
-# wish to submit your edited cddb file.
-#NOSUBMIT=n
-
-# If NOCDDBQUERY is set to y, then abcde will never even try to access
-# the CDDB server; running abcde will automatically drop you into a
-# blank cddb file to edit at your leisure.  This is the same as the
-# -n option.  NOCDDBQUERY=y implies NOSUBMIT=y.
-#NOCDDBQUERY=n
-
-# Select here if you want to use the locally stored CDDB entries.
-# This is useful if you do a lot of editing to those CDDB entries. 
-# Also, other tools like Grip store CDDB entries under $HOME/.cddb,
-# so they can be reused when ripping CDs.
-#CDDBUSELOCAL="n"
-
-# List, separated with a comma, the fields we want the parsing function to
-# output. Defaults to YEAR and GENRE, for a complete list of fields provided by
-# CDDB.
-# The fields are not case sensitive. Actually, "y,g" will work as fine as "Y,G"
-# or "YEAR, GENRE"
-#SHOWCDDBFIELDS=year,genre
-
-# Specify the style of encoder to use here - 
-# oggenc, vorbize - for OGGENCODERSYNTAX
-# lame, gogo, bladeenc, l3enc, xingmp3enc, mp3enc - for MP3ENCODERSYNTAX
-# flac - the only supported for FLACENCODERSYNTAX at the moment
-# speexenc - the only encoder for SPEEXENCODERSYNTAX
-# mppenc - encoder for MPPENCODERSYNTAX
-# default is a valid option for oggenc, lame, flac, speexenc and mppenc.
-# Currently this affects the default location of the binary, the variable
-# to pick encoder command-line options from, and where the options are
-# given.
-#MP3ENCODERSYNTAX=default
-#OGGENCODERSYNTAX=default
-#FLACENCODERSYNTAX=default
-#SPEEXENCODERSYNTAX=default
-#MPPENCODERSYNTAX=default
-#AACENCODERSYNTAX=default
-
-# Specify the syntax of the normalize binary here - so far only 'normalize'
-# is supported.
-#NORMALIZERSYNTAX=default
-
-# CD reader program to use - currently recognized options are 'cdparanoia',
-# 'icedax', 'cdda2wav', 'dagrab', 'cddafs' (Mac OS X only) and 'flac'.
-#CDROMREADERSYNTAX=cdparanoia
-
-# CUE reader syntax for the CUE reader program to use.
-# abcde supports 2 CUE modes: 'mkcue' and 'abcde.mkcue' so you can set the
-# MKCUE variable accordingly. The 'abcde.mkcue' uses an internal
-# implementation, without the need of an external program.
-#CUEREADERSYNTAX=default
-
-# Specify the program to convert a CUE sheet back to a CD disc ID for CDDB queries.
-# Select between '/path/to/cue2discid' (provided as an example) or
-# 'abcde.cue2discid', implemented internaly.
-#CUE2DISCID=abcde.cue2discid
-
-# Keep the wav files after encoding. Set it to "y" and remove "clean" from
-# the list of default actions, since we purge the temp directory as default.
-#KEEPWAVS=n
-
-# Track padding: force abcde to pad tracks using 0, so every song uses a two
-# digit entry. If set to "y", even a single song encoding outputs a file like
-# 01.my_song.ext
-#PADTRACKS=n
-
-# Define if you want abcde to be non-interactive.
-# Keep in mind that there is no way to deactivate it right now in the command
-# line, so setting this option makes abcde to be always non-interactive.
-#INTERACTIVE=n
-
-# Specify 'nice'ness of the encoder, the CD reader and the distmp3 proc.
-# This is a relative 'nice'ness (that is, if the parent process is at a
-# nice level of 12, and the ENCNICE is set to 3, then the encoder will
-# run with an absolute nice value of 15. Note also, that setting these
-# to be empty will result in some default niceness increase (4 in tcsh
-# and 10 using the bsdutils' nice).
-#ENCNICE=10
-#READNICE=10
-#DISTMP3NICE=10
-
-# Paths of programs to use
-#LAME=lame
-#TOOLAME=toolame
-#GOGO=gogo
-#BLADEENC=bladeenc
-#L3ENC=l3enc
-#XINGMP3ENC=xingmp3enc
-#MP3ENC=mp3enc
-#VORBIZE=vorbize
-#OGGENC=oggenc
-# FLAC=flac
-#SPEEXENC=speexenc
-#MPPENC=mppenc
-#AACENC=faac
-
-#ID3=id3
-#ID3V2=id3v2
-#CDPARANOIA=cdparanoia
-#CDDA2WAV=icedax
-#CDDAFS=cp
-#CDDISCID=cd-discid
-#CDDBTOOL=cddb-tool
-#EJECT=eject
-#MD5SUM=md5sum
-#DISTMP3=distmp3
-#VORBISCOMMENT=vorbiscomment
-#METAFLAC=metaflac
-#NORMALIZE=normalize-audio
-#CDSPEED=eject
-#VORBISGAIN=vorbisgain
-#MKCUE=mkcue
-#MKTOC=cdrdao
-#DIFF=diff
-
-# Options to call programs with:
-
-# If HTTPGET is modified, the HTTPGETOPTS options should also be defined 
-# accordingly. If HTTPGET is changed, the default options will be set,
-# if HTTPGETOPTS is empty or not defined.
-#HTTPGET=wget
-# for fetch (FreeBSD): HTTPGETOPTS="-q -o -"
-# for wget: HTTPGETOPTS="-q -nv -O -"
-# for curl (MacOSX): HTTPGETOPTS="-f -s"
-#HTTPGETOPTS="-q -O -"
-
-# MP3:
-#LAMEOPTS=
-#TOOLAMEOPTS=
-#GOGOOPTS=
-#BLADEENCOPTS=
-#L3ENCOPTS=
-#XINGMP3ENCOPTS=
-#MP3ENCOPTS=
-
-# Ogg:
-#VORBIZEOPTS=
-#OGGENCOPTS=
-
-# FLAC:
-#FLACOPTS="-f"
-
-# Speex:
-#SPEEXENCOPTS=
-
-# MPP/MP+ (Musepack):
-# For the encoder options take a look at the manpage. Set them like this:
-# MPPENCOPTS='--xtreme' if you wish to set more options then:
-# MPPENCOPTS='--xtreme --skip 20 --fade 10'
-#MPPENCOPTS=
-
-# M4A/AAC
-#AACENCOPTS=
-
-#ID3OPTS=
-#ID3V2OPTS=
-#CDPARANOIAOPTS=
-#CDDA2WAVOPTS=
-#CDDAFSOPTS="-f"
-#CDDBTOOLOPTS=
-#EJECTOPTS=
-#DISTMP3OPTS=
-#NORMALIZEOPTS=
-#CDSPEEDOPTS="-x"
-#CDSPEEDVALUE=""
-#MKCUEOPTS=""
-#MKTOCOPTS=""
-#DIFFOPTS=""
-#VORBISCOMMENTOPTS="-R"
-#METAFLACOPTS="--no-utf8-convert"
-#DIFFOPTS=""
-
-# Actions to take
-# Comma-separated list of one or more of the following:
-#  cddb,cue,read,normalize,encode,tag,move,playlist,clean,default
-#   encode implies read
-#   normalize implies read
-#   tag implies cddb,read,encode
-#   move implies cddb,read,encode,tag
-#   playlist implies cddb
-# An action can be added to the "default" action by specifying it along with
-# "default", without having to repeat the default ones:
-#  ACTIONS=default,playlist
-# The default action list (referenced as "default") is defined in the following
-# comment:
-#ACTIONS=cddb,read,encode,tag,move,clean
-
-# CD device you want to read from
-# It can be defined as a singletrack flac file, but since it might change from
-# file to file it makes little sense to define it here.
-#CDROM=/dev/cdrom
-# If we are using the IDE bus, we need CDPARANOIACDROMBUS defined as "d"
-# If we are using the ide-scsi emulation layer, we need to define a "g"
-#CDPARANOIACDROMBUS="d"
-
-# If you'd like to make a default location that overrides the current
-# directory for putting mp3's, uncomment this.
-#OUTPUTDIR=`pwd`
-
-# Or if you'd just like to put the temporary .wav files somewhere else
-# you can specify that here
-#WAVOUTPUTDIR=`pwd`
-
-# OUTPUTTYPE can be either "ogg", "mp3", "flac" or "spx", or a combination
-# of them separated with ",": "ogg,mp3".
-#OUTPUTTYPE=ogg
-
-# Output filename format - change this to reflect your inner desire to
-# organize things differently than everyone else :)
-# You have the following variables at your disposal:
-# OUTPUT, GENRE, ALBUMFILE, ARTISTFILE, TRACKFILE, and TRACKNUM.
-# Make sure to single-quote this variable. abcde will automatically create
-# the directory portion of this filename.
-# NOTICE: OUTPUTTYPE has been deprecated in the OUTPUTFORMAT string.
-# Since multiple-output was integrated we always append the file type
-# to the files. Remove it from your user defined string if you are getting
-# files like ".ogg.ogg".
-#OUTPUTFORMAT='${ARTISTFILE}-${ALBUMFILE}/${TRACKNUM}.${TRACKFILE}'
-
-# Like OUTPUTFORMAT but for Various Artists discs.
-#VAOUTPUTFORMAT='Various-${ALBUMFILE}/${TRACKNUM}.${ARTISTFILE}-${TRACKFILE}'
-
-# Like OUTPUTFORMAT and VAOUTPUTFORMAT but for the ONEFILE rips.
-#ONETRACKOUTPUTFORMAT=$OUTPUTFORMAT
-#VAONETRACKOUTPUTFORMAT=$VAOUTPUTFORMAT
-
-# Define how many encoders to run at once. This makes for huge speedups
-# on SMP systems. Defaults to 1. Equivalent to -j.
-#MAXPROCS=2
-
-# Support for systems with low disk space:
-# n:	Default parallelization (read entire CD in while encoding)
-# y:	No parallelization (rip, encode, rip, encode...)
-#LOWDISK=n
-
-# If set to y, enables batch mode normalization, which preserves relative
-# volume differences between tracks of an album. 
-#BATCHNORM=n
-
-# Enables nogap encoding when using the 'lame' encoder.
-#NOGAP=y
-
-# Set the playlist file location format. Uses the same variables and format
-# as OUTPUTFORMAT. If the playlist is specified to be in a subdirectory, it
-# will be created for you and the playlist will reference files from that
-# subdirectory.
-#PLAYLISTFORMAT='${ARTISTFILE}-${ALBUMFILE}.${OUTPUT}.m3u'
-# If you want to prefix every filename in a playlist with an arbitrary
-# string (such as 'http://you/yourstuff/'), use this option
-#PLAYLISTDATAPREFIX=''
-
-#Like PLAYLIST{FORMAT,DATAPREFIX} but for Various Artists discs:
-#VAPLAYLISTFORMAT='${ARTISTFILE}-${ALBUMFILE}.${OUTPUT}.m3u'
-#VAPLAYLISTDATAPREFIX=''
-
-#This will give the playlist CR-LF line-endings, if set to "y".
-#(some hardware players insist on CR-LF line-endings)
-#DOSPLAYLIST=n
-
-# Custom filename munging:
-# By default, abcde will do the following to CDDB data to get a useful
-# filename:
-# * Translate colons to a space and a dash for Windows compatibility
-# * Eat control characters, single quotes, and question marks
-# * Translate spaces and forward slashes to underscores
-# To change that, redefine the mungefilename function.
-# mungefilename receives the CDDB data (artist, track, title, whatever)
-# as $1 and outputs it on stdout.
-#mungefilename ()
-#{
-#	echo "$@" | sed s,:,\ -,g | tr \ / __ | tr -d \'\"\?\[:cntrl:\]
-#}
-
-# Custom genre munging:
-# By default we just transform uppercase to lowercase. Not much of a fancy
-# function, with not much use, but one can disable it or just turn the first
-# Uppercase.
-#mungegenre ()
-#{
-#	echo $CDGENRE | tr "[:upper:]" "[:lower:]"
-#}
-
-
-# Custom pre-read function
-# By default it does nothing.
-# You can set some things to get abcde function in better ways:
-# * Close the CD tray using eject -t (if available in eject and supported by 
-#   your CD device.
-# * Set the CD speed. You can also use the built-in options, but you can also 
-#   set it here. In Debian, eject -x and cdset -x do the job.
-# KEEP IN MIND that executables included in pre_read must be in your $PATH or
-# you have to define them with full /path/to/binary
-# Uncomment and substitute the ":" with your commands.
-#pre_read ()
-#{
-#:
-#}
-
-# Custom post-read function
-# By default it does nothing.
-# You can set some things to get abcde function in better ways:
-# * Store a copy of the CD TOC.
-# KEEP IN MIND that executables included in post_read must be in your $PATH or
-# you have to define them with full /path/to/binary
-# Uncomment and substitute the ":" with your commands.
-#post_read ()
-#{
-#:
-#}
-
-# post_encode
-# By default it does nothing.
-# You can set some things to get abcde function in better ways:
-# * Move the resulting directory over the network
-# * Compare results with a previously made run, for tests
-# KEEP IN MIND that executables included in post_encode must be in your $PATH or
-# you have to define them with full /path/to/binary
-# Uncomment and substitute the ":" with your commands.
-#post_encode ()
-#{
-#:
-#}
-
-# If you'd like to have abcde eject the cdrom after all the tracks have been
-# read, uncomment the following line.
-#EJECTCD=y
-
-# To encode on the remote machines foo, bar, baz, quux, and qiix, as well as
-# on the local machine (requires distmp3 to be installed on local machine and
-# distmp3host to be installed and running on all remote machines - see README)
-#REMOTEHOSTS=foo,bar,baz,quux,qiix
-
-# Set to 1,2, etc. to obtain some information about actions happening in the background
-# Useful if you have a slow network or CDDB servers seem unresponsive.
-#EXTRAVERBOSE=0}}}
+post_encode ()
+{
+	# http://lists.einval.com/pipermail/abcde-users/2015-June/000161.html
+	ARTISTFILE="$(mungefilename "$TRACKARTIST")"
+	ALBUMFILE="$(mungefilename "$DALBUM")"
+	if [ "$VARIOUSARTISTS" = "y" ] ; then
+		FINDPATH="$(eval echo "$VAOUTPUTFORMAT")"
+	else
+		FINDPATH="$(eval echo "$OUTPUTFORMAT")"
+	fi
+	echo "$OUTPUTDIR/$FINDPATH" > ~/.mytestfile
+	FINALDIR="$(dirname "$OUTPUTDIR/$FINDPATH")"
+	cd "$FINALDIR"
+	# don't need to move; already in correct location
+	# leaving off --noautotag
+	# beets fixes some things (e.g. moving multi-disc albums together) and 
+	# adds some extra info (e.g. genres with lastgenre)
+	echo "-------------- beets:"
+	# http://lists.einval.com/pipermail/abcde-users/2014-November/000111.html
+	beet import --nocopy --nowrite . < /dev/tty
+}
