Use ~/music instead of ~/Music

--- a/music/.abcde.conf
+++ b/music/.abcde.conf
@@ -24,7 +24,7 @@ CDPARANOIAOPTS="--never-skip=10"
 # temp dir
 WAVOUTPUTDIR='/tmp'
 # move here
-OUTPUTDIR="$HOME/Music"
+OUTPUTDIR="${XDG_MUSIC_DIR:-$HOME/music}"
 
 # output type
 FLACENCODERSYNTAX=flac
