--- a/music/.mpd/mpd.conf
+++ b/music/.mpd/mpd.conf
@@ -1,7 +1,7 @@
 # An example configuration file for MPD.
 # Read the user manual for documentation: http://www.musicpd.org/doc/user/
 
-music_directory "~/Music"
+music_directory "~/music"
 # Required files
 db_file            "~/.mpd/database"
 log_file           "~/.mpd/log"
