Add image upscale function

--- a/media/.config/ranger/rc.conf
+++ b/media/.config/ranger/rc.conf
@@ -133,6 +133,10 @@ map cm shell convert -flop %f flopped_%f
 # make a 100x100 thumbnail (ranger_functions)
 map cs shell make_thumbnail %f
 
+# upscale (ranger_functions)
+map cu shell upscale %f
+map cU shell upscale %f 10
+
 # convert file to txt
 map ct shell unoconv -f txt %f
 # convert file to pdf
