--- a/root/etc/pacman.conf
+++ b/root/etc/pacman.conf
@@ -29,6 +29,8 @@ Architecture = auto
 #NoExtract   =
 
 # Misc options
+# Show Progress as Pacman
+ILoveCandy
 #UseSyslog
 Color
 #TotalDownload
@@ -37,7 +39,7 @@ CheckSpace
 
 # By default, pacman accepts packages signed by keys that its local keyring
 # trusts (see pacman-key and its man page), as well as unsigned packages.
-SigLevel    = Required DatabaseOptional
+SigLevel    = Required DatabaseOptional TrustedOnly
 LocalFileSigLevel = Optional
 #RemoteFileSigLevel = Required
 
@@ -78,7 +80,9 @@ Include = /etc/pacman.d/mirrorlist
 Server = http://xsounds.org/~haskell/core/$arch
 
 [haskell-happstack]
-Server = ftp://noaxiom.org/$repo/$arch
+# ftp no longer up; https://github.com/tensor5/haskell-happstack/issues/7
+# Server = ftp://noaxiom.org/$repo/$arch
+Server = http://noaxiom.org/$repo/$arch
 
 [extra]
 Include = /etc/pacman.d/mirrorlist
@@ -89,15 +93,27 @@ Include = /etc/pacman.d/mirrorlist
 [community]
 Include = /etc/pacman.d/mirrorlist
 
-[archlinuxfr]
-SigLevel = Never
-Server = http://repo.archlinux.fr/$arch
+[xyne-x86_64]
+# A repo for Xyne's own projects: http://xyne.archlinux.ca/projects/
+# Packages for the "x86_64" architecture.
+# Note that this includes all packages in [xyne-any].
+# https://bbs.archlinux.org/viewtopic.php?pid=1584029#p1584029
+# SigLevel = Required
+Server = http://xyne.archlinux.ca/repos/xyne
 
 [infinality-bundle]
 Server = http://bohoomil.com/repo/$arch
 
 [infinality-bundle-fonts]
 Server = http://bohoomil.com/repo/fonts
+
+[repo-ck]
+Server = http://repo-ck.com/$arch
+# in case of interrupted downloads
+Server = http://repo-ck.com/$arch
+Server = http://repo-ck.com/$arch
+Server = http://repo-ck.com/$arch
+Server = http://repo-ck.com/$arch
 
 # If you want to run 32 bit applications on your x86_64 system,
 # enable the multilib repositories as required here.
