--- a/music/.vimusrc
+++ b/music/.vimusrc
@@ -1,5 +1,9 @@
-# color scheme# {{{
-# a light-on-dark color scheme
+# TODO:
+# - fix redisplay problem and use wm_action script
+# - remapping filter
+
+# * Color Scheme
+# a light-on-dark color scheme (as suggested in README)
 color tab green black
 color main blue black
 color ruler green black
@@ -8,47 +12,115 @@ color playstatus cyan black
 color error white red
 color input white black
 color suggestions green black
-# }}}
-# settings# {{{
+
+# * Settings
 set-library-path ~/music
 song-format %artist% - %title% [%album% %track%]
-# don't rename window based on song
+# don't automatically rename console window based on song
 noautotitle
-# don't remove played songs from the playlist
+# don't automatically remove played songs from the playlist
 noconsume
-# }}}
 
-# bindings# {{{
-# quit
+# * Key Bindings
+# ** General
 map q :quit<CR>
-
-# tmux bindings #{{{
-unmap r
+# I don't use many commands directly; may be useful for :seek <seconds>
+map ; :
+# reload config
 unmap t
-unmap s
+map t. :source ~/.vimusrc<CR>
+# update music database (never have needed); there's also "rescan"
+map u :update<CR>
+
+# open lyrics
+# map l :!~/bin/music/display_lyrics<CR>
+map l :!tmux split-window -h "~/bin/music/display_lyrics"<CR>:!tmux select-layout even-horizontal<CR>
+# open visualizer
+map tv :!tmux split-window -h "cava -i fifo -p /tmp/mpd.fifo"<CR>:!tmux select-layout even-horizontal<CR>
+
+# ** Movement
+# colemak
+map h :move-out<CR>
+map n :move-down<CR>
+map e :move-up<CR>
+# map i :move-in<CR>
+# move right or play if on song
+map i :default-action<CR>
+map g :move-first<CR>
+map G :move-last<CR>
+map b :move-album-prev<CR>
+map w :move-album-next<CR>
+map tk :scroll-half-page-down<CR>
+map to :scroll-half-page-up<CR>
+
+# searching
+# colemak
+map k :search-next<CR>
+map K :search-prev<CR>
+
+# not all that useful:
+map <Up> :scroll-up<CR>
+map <Down> :scroll-down<CR>
+map <PageUp> :scroll-page-up<CR>
+map <PageDown> :scroll-page-down<CR>
+
+# ** Window/View Navigation
+map ? :help<Cr>
+# instead of numbers for accessing tabs
+map <Space>a :window-playlist<CR>
+map <Space>r :window-library<CR>
+map <Space>s :window-browser<CR>
+map <Space>t :window-search<CR>
+# close the SearchResult view
+map x :close<CR>
+
+# less useful
+map tn :window-prev<CR>
+map <Space>n :window-prev<CR>
+map te :window-next<CR>
+map <Space>e :window-next<CR>
+
+# ** Playback
+# modes
+map . :toggle-repeat<CR>
+map s :toggle-single<CR>
+# jumps around randomly in playlist
+map z :toggle-random<CR>
+# actually re-arranges playlist
+# map nil :shuffle<cr>
+
+# playlist actions
+map <CR> :default-action<CR>
+# visual selection
+map v :visual<CR>
+map <ESC> :novisual<CR>
+map c :clear<CR>
+map d :remove<CR>
+map y :copy<CR>
+map p :paste<CR>
+map P :paste-prev<CR>
+# append to end of playlist
+map a :add<CR>
+# append after currently playing song
+map A :insert<CR>
+# a already will add album and all songs in browser based on level
+# map A :add-album<CR>
+map H :seek -5<CR>
+map I :seek 5<CR>
+
+# have these mapped outside of vimus (~/.config/sxhkd/sxhkdrc)
+map > :next<cr>
+map \< :previous<cr>
+map E :volume +5<CR>
+map N :volume -5<CR>
+# play or pause
+map o :toggle<CR>
+
+# ** Tmux
+unmap r
 # split window works fine
-#  straight from vimrc
-# " replace nnoremap <silent> with map and remove "silent "
-# tmux experimentation#{{{
-# #r# is redraw#{{{
-# # window switching#{{{
-map ra :!~/bin/tmux/vimus_tmux.sh a<cr>
-map rr :!~/bin/tmux/vimus_tmux.sh r<cr>
-map rs :!~/bin/tmux/vimus_tmux.sh s<cr>
-map rt :!~/bin/tmux/vimus_tmux.sh t<cr>
-map rd :!~/bin/tmux/vimus_tmux.sh d<cr>
-map rh :!~/bin/tmux/vimus_tmux.sh h<cr>
-map rn :!~/bin/tmux/vimus_tmux.sh n<cr>
-map re :!~/bin/tmux/vimus_tmux.sh e<cr>
-map ri :!~/bin/tmux/vimus_tmux.sh i<cr>
-map ro :!~/bin/tmux/vimus_tmux.sh o<cr>
-# #}}}
-# resize panes#{{{
-map rmh :!~/bin/tmux/vimus_tmux.sh rmh<cr>
-map rmn :!~/bin/tmux/vimus_tmux.sh rmn<CR>
-map rme :!~/bin/tmux/vimus_tmux.sh rme<CR>
-map rmi :!~/bin/tmux/vimus_tmux.sh rmi<CR>
-# #}}}
+# straight from vimrc
+# replace nnoremap <silent> with map and remove "silent "
 # circulate
 # previous
 map r, :!~/bin/tmux/vimus_tmux.sh r,<CR>
@@ -67,113 +139,22 @@ map rl :!~/bin/tmux/vimus_tmux.sh rl<CR>
 # split windows
 map r/ :!~/bin/tmux/vimus_tmux.sh r/<CR>
 map r- :!~/bin/tmux/vimus_tmux.sh r-<CR>
-#
 # break pane
 map r! :!~/bin/tmux/vimus_tmux.sh r!<CR>
-# #}}}
+# *** Window Switching
+map ra :!~/bin/tmux/vimus_tmux.sh a<cr>
+map rr :!~/bin/tmux/vimus_tmux.sh r<cr>
+map rs :!~/bin/tmux/vimus_tmux.sh s<cr>
+map rt :!~/bin/tmux/vimus_tmux.sh t<cr>
+map rd :!~/bin/tmux/vimus_tmux.sh d<cr>
+map rh :!~/bin/tmux/vimus_tmux.sh h<cr>
+map rn :!~/bin/tmux/vimus_tmux.sh n<cr>
+map re :!~/bin/tmux/vimus_tmux.sh e<cr>
+map ri :!~/bin/tmux/vimus_tmux.sh i<cr>
+map ro :!~/bin/tmux/vimus_tmux.sh o<cr>
 
-# panes#{{{
-# directions
-map sh :!~/bin/tmux/vimus_tmux.sh sh<CR>
-map sn :!~/bin/tmux/vimus_tmux.sh sn<CR>
-map se :!~/bin/tmux/vimus_tmux.sh se<CR>
-map si :!~/bin/tmux/vimus_tmux.sh si<CR>
-# last
-map sl :!~/bin/tmux/vimus_tmux.sh sl<CR>
-# select layout
-map sv :!~/bin/tmux/vimus_tmux.sh sv<CR>
-
-# toggle #monocle# (zoom)
-map st :!~/bin/tmux/vimus_tmux.sh st<CR>
-# bspwm monocle
-map sm :!~/bin/tmux/vimus_tmux.sh sm<CR>
-# fullscreen
-map sf :!~/bin/tmux/vimus_tmux.sh sf<CR>
-
-#}}}
-
-# select session
-# just going to not do this one
-# map ss :!tmux choose-client<CR>
-# #}}}
-# #}}}
-
-# General
-map ; :
-map c :clear<CR>
-# next start playing next song; previous
-
-# window-search; window-playlist; library; browser
-map t. :source ~/.vimusrc<CR>
-
-map u :update<CR>
-# open album art in ranger in split
-map ta :!~/bin/music/albumart_display.sh % &<CR>
-# open lyrics in ncmpcpp split
-map l :!~/bin/music/lyric_display.sh<CR>
-# open visualization in ncmppcp split
-map tv :!~/bin/music/visualizer.sh<CR>
-
-map f :shuffle<cr>
-map . :toggle-repeat<CR>
-# map r :toggle-random<CR>
-# map c :toggle-consume<CR>
-map S :toggle-single<CR>
-
-# movement# {{{
-# colemak
-map h :move-out<CR>
-map n :move-down<CR>
-map e :move-up<CR>
-map i :move-in<CR>
-map gg :move-first<CR>
-map G :move-last<CR>
-map { :move-album-prev<CR>
-map } :move-album-next<CR>
-map tk :scroll-half-page-down<CR>
-map to :scroll-half-page-up<CR>
-# map <C-Y> :scroll-up<CR>
-# map <C-E> :scroll-down<CR>
-# map <C-B> :scroll-page-up<CR>
-# map <PageUp> :scroll-page-up<CR>
-# map <C-F> :scroll-page-down<CR>
-# map <PageDown> :scroll-page-down<CR>
-# }}}
-# tab navigation# {{{
-map x :close<CR>
-# map <C-P> :window-prev<CR>
-# map <C-N> :window-next<CR>
-# instead of numbers for accessing tabs
-map <Space>a :window-playlist<CR>
-map <Space>r :window-library<CR>
-map <Space>s :window-browser<CR>
-map <Space>t :window-search<CR>
-# }}}
-# playback# {{{
-map <CR> :default-action<CR>
-map tt  :toggle<CR>
-map o  :toggle<CR>
-map d :remove<CR>
-map y :copy<CR>
-map p :paste<CR>
-map P :paste-prev<CR>
-map a :add<CR>
-map A :insert<CR>
-# a already will add album and all songs in browser based on level
-# map A :add-album<CR>
-map H :seek -5<CR>
-map I :seek 5<CR>
-map > :next<cr>
-map < :previous<cr>
-map E :volume +5<CR>
-map N :volume -5<CR>
-# }}}
-# search
-# colemak
-map k :search-next<CR>
-map K :search-prev<CR>
-
-# selecting
-map v :visual<CR>
-map <ESC> :novisual<CR>
-# }}}
+# *** Resize Panes
+map rmh :!~/bin/tmux/vimus_tmux.sh rmh<cr>
+map rmn :!~/bin/tmux/vimus_tmux.sh rmn<CR>
+map rme :!~/bin/tmux/vimus_tmux.sh rme<CR>
+map rmi :!~/bin/tmux/vimus_tmux.sh rmi<CR>
