--- a/aesthetics/.slimlock/slimlock.conf
+++ b/aesthetics/.slimlock/slimlock.conf
@@ -1,29 +1,21 @@
-dpms_standby_timeout            60
-dpms_off_timeout                600
+dpms_standby_timeout 60
+dpms_off_timeout     600
+wrong_passwd_timeout 0
+passwd_feedback_x    50%
+passwd_feedback_y    79%
+bell                 0
+show_username        1
+show_welcome_msg     0
+# allow tty switching
+tty_lock             0
 
-wrong_passwd_timeout            0
-passwd_feedback_x               50%
-passwd_feedback_y               10%
-passwd_feedback_msg             NO NO NO!
-passwd_feedback_capslock        Authentication failed (CapsLock is on)
-show_username                   1
-show_welcome_msg                0
-# don't lock
-tty_lock                        0
+# messages
+# welcome_msg              Welcome to %host.%domain
+passwd_feedback_msg      NO NO NO!
+passwd_feedback_capslock Authentication failed (CapsLock is on)
 
-# Hide the mouse cursor (note: does not work with some WMs).
-# Valid values: true|false
-hidecursor          true
+# hide mouse cursor
+hidecursor true
 
-# Executed when pressing F11 (requires imagemagick)
-screenshot_cmd      import -window root ~/Move/slimlock.png
-
-# welcome message. Available variables: %host, %domain
-welcome_msg         Welcome to %host.%domain
-
-# current theme, use comma separated list to specify a set to 
-# randomly choose from
-current_theme       custom-disgaea
-
-# no bell
-bell 0
+# can use comma separated list to randomly choose from
+current_theme custom-disgaea
