--- a/media/.config/ranger/rifle.conf
+++ b/media/.config/ranger/rifle.conf
@@ -1,7 +1,9 @@
 # see /usr/share/doc/ranger/config/rifle.conf
-# like xdg-open but better
 
 # Notes:
+# - Unlike rc.conf and commands.py, a user's rifle.conf does not inherit from
+#   the default rifle.conf
+# - Order corresponds to precedence
 # - $EDITOR must NOT be quoted if it is a program with options
 #   $EDITOR is technically supposed to be a path to a program
 # - The -- is no longer needed, as ranger now passes in the full path
@@ -9,25 +11,43 @@
 # - Tdrop is used to hide the terminal when opening graphical applications
 
 # browser
-ext x?html?, has firefox, X, flag f = firefox -- "$@"
-ext x?html?, has w3m, terminal  = w3m "$@"
+ext x?html?, has firefox, X, flag f = firefox "$@"
+ext x?html?, has w3m, terminal = w3m "$@"
 
 # define the "editor" for text files as first action
-mime ^text,  label editor = $EDITOR -- "$@"
+mime ^text, label editor = $EDITOR "$@"
+# for some reason, ranger doesn't consider files with certain extensions to be
+# text/plain even when file --mimetype says they are
+ext org, label editor = $EDITOR "$@"
+ext 1, label pager = man "$1"
+mime ^text, label pager  = "$PAGER" "$@"
 
 # audio
-mime ^audio|ogg$, terminal, has mpv = mpv --no-audio-display -- "$@"
+mime ^audio|ogg$, terminal, has mpv = mpv --no-audio-display "$@"
 
 # video
-mime ^video, has mpv, X, flag f = tdrop -a auto_hide && mpv --loop=inf -- "$@" && tdrop -a -m auto_show
+mime ^video, has mpv, X, flag f = tdrop -a auto_hide && mpv --loop=inf "$@" && tdrop -a auto_show
 
 # video in framebuffer
-mime ^video, terminal, !X, has vlc = vlc -- "$@"
+mime ^video, terminal, !X, has vlc = vlc "$@"
 
 # images
-# mime ^image, has sxiv, X, flag f = tdrop -a auto_hide && pqiv -- "$@" && tdrop -a -m auto_show
-mime ^image, has sxiv, X, flag f = tdrop -a auto_hide && sxiv -a -- "$@" && tdrop -a -m auto_show
+# mime ^image/svg, has inkscape, X, flag f = inkscape "$@"
+mime ^image/svg, has display, X, flag f = display "$@"
+# mime ^image, has pqiv, X, flag f = tdrop -a auto_hide && pqiv "$@" && tdrop -a auto_show
+mime ^image, has sxiv, X, flag f = tdrop -a auto_hide && sxiv -a "$@" && tdrop -a auto_show
+ext xcf, X, flag f = gimp "$@"
 
 # pdf
-ext pdf, has zathura, X, flag f = tdrop -a auto_hide && zathura -- "$@" && tdrop -a -m auto_show
-# ext pdf, has apvlv, X, flag f = apvlv -- "$@"
+ext pdf|djvu, has zathura, X, flag f = tdrop -a auto_hide && zathura "$@" && tdrop -a auto_show
+# ext pdf, has apvlv, X, flag f = apvlv "$@"
+
+# word
+ext pptx?|od[dfgpst]|docx?|sxc|xlsx?|xlt|xlw|gnm|gnumeric, has libreoffice, X, flag f = libreoffice "$@"
+
+# archives
+ext 7z|ace|ar|arc|bz2?|cab|cpio|cpt|deb|dgc|dmg|gz, has atool = atool -l "$@" | "$PAGER"
+ext iso|jar|msi|pkg|rar|shar|tar|tgz|xar|xpi|xz|zip, has atool = atool -l "$@" | "$PAGER"
+
+# misc
+ext exe = wine "$1"
