Add fzf_locate command to ranger

--- a/media/.config/ranger/rc.conf
+++ b/media/.config/ranger/rc.conf
@@ -230,6 +230,7 @@ map f console find%space
 # see commands.py
 map F console fasd%space
 map tp fzf_select
+map <space>p fzf_locate
 
 map l history_go -1
 map L history_go 1
