Add jar running to rifle.conf

--- a/media/.config/ranger/rifle.conf
+++ b/media/.config/ranger/rifle.conf
@@ -45,9 +45,11 @@ ext pdf|djvu, has zathura, X, flag f = tdrop -a auto_hide && zathura "$@" && tdr
 # word
 ext pptx?|od[dfgpst]|docx?|sxc|xlsx?|xlt|xlw|gnm|gnumeric, has libreoffice, X, flag f = libreoffice "$@"
 
+# misc
+ext exe = wine "$1"
+# needs higher precedence than archives
+ext jar, flag f = java -jar "$1"
+
 # archives
 ext 7z|ace|ar|arc|bz2?|cab|cpio|cpt|deb|dgc|dmg|gz, has atool = atool -l "$@" | "$PAGER"
 ext iso|jar|msi|pkg|rar|shar|tar|tgz|xar|xpi|xz|zip, has atool = atool -l "$@" | "$PAGER"
-
-# misc
-ext exe = wine "$1"
