Update tf2 configs

--- a/games/.local/share/Steam/steamapps/common/Team Fortress 2/tf/cfg/autoexec.cfg
+++ b/games/.local/share/Steam/steamapps/common/Team Fortress 2/tf/cfg/autoexec.cfg
@@ -1,24 +1,36 @@
 // * General Settings
-// most annoying default setting
+// fix most annoying default setting
 hud_fastswitch 1
 
 // display damage over target
 hud_combattext 1
+
+// dingalings
+tf_dingalingaling 1
+tf_dingaling_pitchmaxdmg 50
+tf_dingaling_pitchmindmg 150
 
 // crosshair
 cl_crosshair_file crosshair7
 // size (default: 32)
 cl_crosshair_scale 28
 
-// I find it visually annoying; can waste ammo with certain weapons (default off)
-cl_autoreload 0
+// now that spy animation is less distracting, keep on
+cl_autoreload 1
+
+// automatically respawn when loadout changes in spawn
+tf_respawn_on_loadoutchanges 1
 
 // field of view (default: 75)
+// max is 90; can only increase further with wider resolution
 fov_desired 90
 
 // * Mouse Settings
 // use raw mouse input
 m_rawinput 1
+
+// using 1400 dpi; maybe try 2.5
+sensitivity 2
 
 // https://www.reddit.com/r/tf2/comments/2j7zuy/guide_get_the_right_mouse_and_use_it_right/
 // disable mouse accel (all defaults already)
@@ -43,3 +55,72 @@ hud_medichealtargetmarker 1
 // give notifications when teamates drop below a certain health %
 hud_medicautocallers 1
 hud_medicautocallersthreshold 70
+
+// * General Keybindings
+// https://wiki.teamfortress.com/wiki/Scripting#List_of_key_names
+
+// medic call
+bind f "voicemenu 0 0"
+
+// ** Null Movement
+// http://ozfortress.com/showpost.php?p=624355
+// prevents stopping when pressing left and right at same time
+alias none ""
+alias +mfwd "-back;+forward;alias checkfwd +forward"
+alias +mback "-forward;+back;alias checkback +back"
+alias +mleft "-moveright;+moveleft;alias checkleft +moveleft"
+alias +mright "-moveleft;+moveright;alias checkright +moveright"
+alias -mfwd "-forward;checkback;alias checkfwd none"
+alias -mback "-back;checkfwd;alias checkback none"
+alias -mleft "-moveleft;checkright;alias checkleft none"
+alias -mright "-moveright;checkleft;alias checkright none"
+alias checkfwd none
+alias checkback none
+alias checkleft none
+alias checkright none
+
+bind w +mfwd
+bind s +mback
+bind a +mleft
+bind d +mright
+
+// ** Changing Weapons
+bind mwheelup slot1
+bind mwheeldown slot2
+bind q slot3
+bind e slot4
+
+// ** Changing Loadouts
+bind kp_end "load_itempreset 0"
+bind kp_downarrow "load_itempreset 1"
+bind kp_pgdn "load_itempreset 2"
+bind kp_arrowleft "load_itempreset 3"
+
+// ** Changing Classes
+// http://tf2wiki.net/wiki/Scripting
+// press alt+num to change class
+alias +joinclass "bind 1 scout; bind 2 soldier; bind 3 pyro; bind 4 demoman; bind 5 heavy; bind 6 engineer; bind 7 medic; bind 8 sniper; bind 9 spy"
+alias "-joinclass" "bind 1 slot1; bind 2 slot2; bind 3 slot3; bind 4 slot4; bind 5 slot5; bind 6 slot6; bind 7 slot7; bind 8 slot8; bind 9 slot9"
+
+alias scout "join_class scout"
+alias soldier "join_class soldier"
+alias pyro "join_class pyro"
+alias demoman "join_class demoman"
+alias heavy "join_class heavyweapons"
+alias engineer "join_class engineer"
+alias medic "join_class medic"
+alias sniper "join_class sniper"
+alias spy "join_class spy"
+
+bind alt +joinclass
+
+// ** Move Spawn
+// I haven't tried with this with classes other than medic
+// http://tf2.gamebanana.com/scripts/8011
+// prevents loss of ubercharge
+// requires same medigun in preset A and B and at least one different weapon
+// tap once to change spawn then again to re-equip old loadout
+alias movespawn_first "load_itempreset 1; alias "movespawn_third" "movespawn_second""
+alias movespawn_second "load_itempreset 0; alias "movespawn_third" "movespawn_first""
+alias movespawn_third movespawn_first
+bind f4 movespawn_third
