Open swfs in firefox with rifle

--- a/media/.config/ranger/rifle.conf
+++ b/media/.config/ranger/rifle.conf
@@ -53,3 +53,6 @@ ext jar, flag f = java -jar "$1"
 # archives
 ext 7z|ace|ar|arc|bz2?|cab|cpio|cpt|deb|dgc|dmg|gz, has atool = atool -l "$@" | "$PAGER"
 ext iso|jar|msi|pkg|rar|shar|tar|tgz|xar|xpi|xz|zip, has atool = atool -l "$@" | "$PAGER"
+
+# flash
+ext swf = firefox "$@"
