--- a/aesthetics/.config/gtk-3.0/settings.ini
+++ b/aesthetics/.config/gtk-3.0/settings.ini
@@ -1,8 +1,7 @@
-include "/home/noctuid/.gtkrc-2.0.mine"
-gtk-theme-name="Numix"
-gtk-icon-theme-name="Numix"
-gtk-font-name="Cantarell 11"
-gtk-cursor-theme-name="Adwaita"
+[Settings]
+gtk-theme-name=Numix
+gtk-icon-theme-name=Numix
+gtk-font-name=Cantarell 11
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
@@ -10,7 +9,8 @@ gtk-button-images=1
 gtk-menu-images=1
 gtk-enable-event-sounds=0
 gtk-enable-input-feedback-sounds=0
+gtk-xft-hintstyle=hintfull
+gtk-xft-rgba=rgb
+gtk-cursor-theme-name=Adwaita
 gtk-xft-antialias=1
 gtk-xft-hinting=1
-gtk-xft-hintstyle="hintfull"
-gtk-xft-rgba="rgb"
