Update tmux configuration
- Use org syntax for headings
- Start using tpm for plugins; add plugin to show when prefix has been
  pressed
- Get rid of unused configuration
- Add key to open scrollback in editor
- Switch to using link-hint.el for opening urls
- Fix url hinting in mutt (markers mess up wrapped urls)

--- a/mail/.muttrc
+++ b/mail/.muttrc
@@ -44,8 +44,9 @@ set pipe_decode
 set thorough_search
 # wrap at word end
 set smart_wrap
-# start wrapped lines with +
-set markers
+# start wrapped lines with +; messes up url hinting
+# set markers
+unset markers
 # Retain 5 lines of previous page when scrolling.
 set pager_context=5
 # status bar on top
