Update keyboard layout setup
- Switch to using xkb through klfc
- Using xkb fixes right shift still acting as shift when remapped
  (xmodmap bug), allows remapping specific modifier combinations, etc.
- Klfc provides a more universal and flexible (e.g. mods and shiftstate
  customization) keyboard layout format
- Make separate script for rldkbd and rldxcape
- Start using 4 thumbkeys and 2 mouse buttons below the space bar as
  modifiers
- Update layout to not need the number row
- Update sxhkdrc to use org style headings/folding
- Don't use alt for global hotkeys (since used by programs)
- Make desktop switching keybindings more convenient (home row);
  in-program prefix r no longer necessary/useful
etc.

--- a/remap/.config/xchainkeys/xchainkeys.conf
+++ b/remap/.config/xchainkeys/xchainkeys.conf
@@ -1,10 +1,11 @@
-# backup bindings (in case sxhkd gets screwed )
+# backup bindings (in case sxhkd gets screwed)
 # maybe add backup wmctrl bindings
-W-o :enter timeout=0 abort=automatic
-W-o r :reload
+W-x :enter timeout=0 abort=automatic
+W-x r :reload
 
-W-o x :exec pkill sxhkd ; sxhkd &
-W-o S-x :exec pkill sxhkd
-W-o S-b :exec pkill bspc
-W-o d :exec dmenu
-W-o t :exec xterm
+W-x x :exec pkill sxhkd ; sxhkd &
+W-x S-x :exec pkill sxhkd
+W-x S-b :exec pkill bspc
+W-x d :exec dmenu
+W-x t :exec xterm
+W-x S-t :exec tdrop -a -w 1362 -y 14 -s dropdown termite
