--- a/root/etc/systemd/system/slimlock@.service
+++ b/root/etc/systemd/system/slimlock@.service
@@ -1,12 +1,11 @@
 # https://bbs.archlinux.org/viewtopic.php?pid=1429854#p1429854
-# e.g. run like:
-# $ sudo systemctl enable slimlock@$USER
 [Unit]
 Description=Lock X session using slimlock
 
 [Service]
 User=%I
-Environment=Display=:0
+Type=Simple
+Environment=DISPLAY=:0
 ExecStart=/usr/bin/slimlock
 
 [Install]
