Update tmux config
- Remove obsolete utf8 options
- Use ' instead of / to split the pane
- Bind home/end in copy mode

--- a/terminal/.tmux.conf
+++ b/terminal/.tmux.conf
@@ -33,9 +33,6 @@ set -g history-limit 100000
 # http://www.youtube.com/watch?v=xUB-quCdun0
 bind-key -n C-k clear-history
 
-set -g utf8
-setw -g utf8 on
-
 # fix mode switching delay in vim; https://superuser.com/questions/252214/slight-delay-when-switching-modes-in-vim-using-tmux-or-screen/252717#252717
 set -sg escape-time 0
 
@@ -127,7 +124,7 @@ bind-key -r H resize-pane -L 5
 bind-key -r I resize-pane -R 5
 
 # better pane split bindings
-bind-key / split-window -h
+bind-key "'" split-window -h
 bind-key - split-window -v
 
 # toggle maximize pane; now builtin
@@ -147,6 +144,8 @@ bind-key p paste-buffer
 bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy V select-line
 bind-key -t vi-copy r rectangle-toggle
+bind-key -t vi-copy Home start-of-line
+bind-key -t vi-copy End end-of-line
 # using tmux-yank instead now
 # yank; I added copy pipe so I don't have to hit prefix c-c to copy to clipboard..
 # bind-key -t vi-copy y copy-pipe "xsel -ib"
@@ -193,7 +192,7 @@ bind-key -ct vi-edit L end-of-line
 bind-key -ct vi-edit j next-word-end
 bind-key -ct vi-edit J next-space-end
 
-# * External Scripts 
+# * External Scripts
 # cmatrix screensaver
 # demo video: http://www.youtube.com/watch?v=s0T82aJn1DQ
 # set -g lock-after-time 120
